<resources>
    <string name="app_name">Fitness Controller</string>
    <string name="title_dashboard">Lista de Rutinas</string>
    <string name="title_Settings">Ajustes</string>
    <string name="title_principal">Menu Principal</string>
    <string name="NombredeelDispositivo">Nombre del Dispositivo:</string>
    <string name="macdispconec">Mac del Dispositivo:</string>
    <string name="acept">Aceptar</string>
    <string name="listemp">Lista de dispositivos emparejados</string>
    <string name="numrep">Ingrese Numero de Repeticiones</string>
    <string name="agregar_rut">Agregar Rutina</string>
    <string name="name_rut">Nombre</string>
    <string name="nameent_rut">Nombre del entrenador</string>
    <string name="serie_rut">Numero de series</string>
    <string name="rep_rut">Numero de Repeticiones</string>
    <string name="errorsocket">La conexion no se ha efectuado</string>
    <string name="app_tittle">Pagina Principal</string>
    <string name="iniciar_rutina">Iniciar rutina</string>
    <string name="cancelar_rutina">Cancelar Rutina</string>
    <string name="reiniciar_rutina">Reiniciar Rutina</string>
</resources>
