<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Nombredispcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/NombredeelDispositivo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal"
        android:text="@string/macdispconec"
        app:layout_constraintStart_toStartOf="@+id/Nombredispcon"
        app:layout_constraintTop_toBottomOf="@+id/Nombredispcon" />

    <Spinner
        android:id="@+id/spinerlista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mac"
        tools:ignore="MissingConstraints">
    </Spinner>

    <Button
        android:text="@string/iniciar_rutina"
        android:background="@color/colorPrimary"
        android:id="@+id/cap_r"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_margin="4dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinerlista" />

    <me.itangqi.waveloadingview.WaveLoadingView
        android:id="@+id/repeticiones"
        android:layout_width="230dp"
        android:layout_height="231dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cap_r"
        app:layout_constraintVertical_bias="0.203"
        app:wlv_borderColor="@color/colorPrimaryDark"
        app:wlv_borderWidth="3dp"
        app:wlv_progressValue="0"
        app:wlv_round_rectangle="true"
        app:wlv_shapeType="circle"
        app:wlv_titleCenter="0"
        app:wlv_titleCenterColor="@android:color/white"
        app:wlv_titleCenterSize="24dp"
        app:wlv_titleCenterStrokeColor="@color/colorAccent"
        app:wlv_titleCenterStrokeWidth="3dp"
        app:wlv_triangle_direction="north"
        app:wlv_waveAmplitude="70"
        app:wlv_waveColor="@color/colorPrimary" />


</android.support.constraint.ConstraintLayout>